--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -32,8 +32,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:15.0.1'
 
     implementation "me.leolin:ShortcutBadger:1.1.22@aar"
-
-
-
+    compile 'com.github.arturogutierrez:badges:1.0.5@aar'
 }
 apply plugin: 'com.google.gms.google-services'
